SERVER-56261 remove invariant that RetryableWriteError and TransientTransactionError are mutually exclusive